--- a/app/src/main/res/layout/custom_exoplayer.xml
+++ b/app/src/main/res/layout/custom_exoplayer.xml
@@ -183,6 +183,7 @@
             android:layout_gravity="center_vertical">
 
             <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/exo_play"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:padding="6dp"
                 android:layout_width="wrap_content"
@@ -195,6 +196,7 @@
 
 
             <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/exo_pause"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:padding="6dp"
                 android:layout_width="wrap_content"
