--- a/app/src/main/res/layout/custom_exoplayer.xml
+++ b/app/src/main/res/layout/custom_exoplayer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,11 +9,6 @@
 
 
 
-    <RelativeLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_gravity="center_vertical"
-        android:clickable="false"/>
 
 
     <LinearLayout
@@ -46,7 +42,7 @@
 
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/exo_rew"
+                android:id="@id/exo_rew"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:padding="6dp"
                 android:layout_width="0dp"
@@ -69,7 +65,7 @@
                 android:layout_weight="1"/>
 
             <androidx.appcompat.widget.AppCompatImageButton
-                android:id="@+id/exo_ffwd"
+                android:id="@id/exo_ffwd"
                 android:background="?android:attr/selectableItemBackgroundBorderless"
                 android:padding="6dp"
                 android:layout_width="0dp"
