--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -22,11 +22,11 @@
             android:layout_height="84dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="26dp"
-            android:src="@drawable/ic_facebook"
-            android:scaleType="centerCrop"
             android:elevation="4dp"
-            app:civ_border_width="2.5dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_facebook"
             app:civ_border_color="@color/transparent"
+            app:civ_border_width="2.5dp"
             tools:ignore="ContentDescription" />
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -39,9 +39,10 @@
             android:ellipsize="end"
             android:gravity="center"
             android:maxLines="1"
-            android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textColor="?android:textColorPrimary"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            tools:text="@string/app_name"/>
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/pin_code_step_textview"
@@ -53,7 +54,7 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:text="@string/pin_code_step_enter"
-            android:textColor="@color/white"
+            android:textColor="?android:textColorPrimary"
             android:textSize="18sp" />
 
 
@@ -66,8 +67,8 @@
             android:layout_marginTop="20dp"
             android:background="?attr/selectableItemBackgroundBorderless"
             android:text="@string/forgot_pass"
-            android:textColor="@color/white"
-            android:textSize="16sp"
+            android:textColor="?android:textColorPrimary"
+            android:textSize="14sp"
             android:textStyle="bold"
             android:visibility="invisible" />
 
@@ -95,7 +96,7 @@
             app:keypadButtonSize="72dp"
             app:keypadDeleteButtonSize="25dp"
             app:keypadShowDeleteButton="true"
-            app:keypadTextColor="@color/white"
+            app:keypadTextColor="?android:textColorPrimary"
             app:keypadTextSize="24dp" />
 
         <View
@@ -110,10 +111,11 @@
             android:id="@+id/pin_code_lock_imageview"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/pin_lock_view"
             android:layout_alignParentBottom="true"
             android:layout_centerInParent="true"
+            android:layout_marginBottom="?attr/actionBarSize"
             android:src="@drawable/ic_lock_settings"
+            android:tint="?android:textColorPrimary"
             tools:ignore="ContentDescription" />
 
 
